<resources>
    <string name="app_name">Game Length</string>
    <string name="settings">Settings</string>
    <string name="backUpdate">Update in background?</string>
    <string name="notificationsCheck">Recieve Notifications?</string>
    <string name="save">Save</string>
    <string name="cancel">Close</string>
    <string name="pluggedIn">Only when plugged in?</string>
    <string name="alert_dialog_ok">Ok</string>
    <string name="updating">Updates</string>
    <string name="notifications">Notifications</string>
    <string name="title_activity_settings">Settings</string>
    <string name="about">About</string>
    <string name="credits">By Colin Willson &amp; Matt Allen</string>
    <string name="games">Games</string>
    <string name="favorites">Favorites</string>
    <string name="hours">Hours</string>
    <string name="empty">--</string>
    <string name="search">Search</string>
    <string name="searchGame">Search for a game</string>
    <string name="clear">Clear Search</string>
    <string name="nonet">Unable to update games list.</string>
    <string name="empty_favorites">No favorites to show.\nSearch for games to add on the \"Games\" screen!</string>
    <string name="empty_games_network">No games to show.\nMake sure you are connected to the internet and try again!</string>
    <string name="empty_games_search">No games to show.\nTry broadening your search terms!</string>
    <string name="empty_games">No games to show.\nMake sure you are connected to the internet, or try broadening your search terms!</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="MainStory">Main Story</string>
    <string name="Extra">Main + Extra</string>
    <string name="Completionist">Completionist</string>
    <string name="Combined">Combined</string>
    <string name="Polled">Polled</string>
    <string name="Rated">Rated</string>
    <string name="Backlog">Backlog</string>
    <string name="Playing">Playing</string>
    <string name="Retired">Retired</string>
    <string name="gameImage">Game Image</string>
    <string name="gameDetailImage">Game Detail Image</string>
    <string name="favImage">Favorite Image</string>
</resources>
