<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="howlongtobeat.cwftw.me.howlongtobeat.Preferences">

    <PreferenceCategory
        android:title="@string/updating">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/backUpdate"
        android:title="@string/backUpdate"/>

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/pluggedIn"
        android:title="@string/pluggedIn"
        android:dependency="@string/backUpdate" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/notifications" >
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/notifications"
        android:title="@string/notificationsCheck" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about" >
        <Preference
            android:key="@string/credits"
            android:title="@string/credits">
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>